--- a/note/03训练营刷题第一期/刷题.md
+++ b/note/03训练营刷题第一期/刷题.md
@@ -1,4 +1,4 @@
-## 1 训练营一
+## 第一节
 
 ```text
 笔记
@@ -661,7 +661,7 @@ public class Code07MaxSumInTree {
 
 
 
-## 2 训练营一
+## 第二节
 
 
 
@@ -937,7 +937,7 @@ public class Code03MaxABSBetweenLeftAndRight {
 }
 ```
 
-## 3 训练营一
+
 
 ```text
 单位置聚焦方法
@@ -1442,7 +1442,7 @@ public class Code07KthMinPair {
 
 ```
 
-## 4 训练营一
+## 第三节
 
 
 
@@ -1555,7 +1555,7 @@ public class Code07KthMinPair {
 
 
 
-## 5 训练营一
+## 第四节
 
 
 
@@ -2055,7 +2055,7 @@ public class Code05EnvelopesProblem {
 
 
 
-## 6 训练营一
+## 第五节
 
 
 
@@ -2185,27 +2185,15 @@ HashMap 和 双向链表
 
 
 
-## 6 训练营三 
-
-
+## 第六节
 
 ```tex
 总结 
 
+关于 动态规划
+其实动态规划的种类不止四种，可能是四种互相
+
 ```
-
-![img_35.png](img_35.png)
-
-
-![img_34.png](img_34.png)
-
-![img_36.png](img_36.png)
-
-![img_37.png](img_37.png)
-
-![img_38.png](img_38.png)
-
-
 
 #### 1 MaxEOR
 ---
@@ -2236,7 +2224,10 @@ HashMap 和 双向链表
 
 
 ```tex
+这道题 使用了动态规划， 根据结果反推过程
 
+1 这里的dp[i] 并不是以arr[i]结尾切分 可以获取的最大的分数
+2 这里的dp[i] 指的是以0 ... i这一段上 任意切分 ，所获取的最大分数。
 ```
 
 ```java
@@ -2333,7 +2324,7 @@ HashMap 和 双向链表
 
 
 
-## 7 第七节
+##  第七节
 
 ####  Code01MinLengthForSort
 
@@ -2427,4 +2418,18 @@ HashMap 和 双向链表
 ```
 
 
+![img_44.png](img_44.png)
 
+
+![img_45.png](img_45.png)
+
+![img_46.png](img_46.png)
+
+## 第八节
+
+![img_47.png](img_47.png)
+
+
+![img_49.png](img_49.png)
+
+![img_48.png](img_48.png)
